--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@
 .text-image-button {
   /* background-color: #04AA6D; */
   font-family: "EB Garamond";
-  color: black;
+  color: rgba(255,255,255,1.00);
   font-size: 35px;
   font-style: normal;
   font-variant: normal;
@@ -58,6 +58,7 @@
   font-variant: normal;
   font-weight: 700;
   line-height: 26.4px;
+  color: rgba(255,255,255,1.00);
 }
 
 .text-font {
@@ -67,6 +68,7 @@
   font-variant: normal;
   font-weight: 400;
   line-height: 20px;
+  color: rgba(255,255,255,1.00);
 }
 
 
@@ -77,16 +79,20 @@
   font-variant: normal;
   font-weight: 300;
   line-height: 20px;
+  color: rgba(255,255,255,1.00);
 }
 
 
 .body-borders{
-  border-left: 1px solid rgba(0, 0, 0, 0.2);
-  border-right: 1px solid rgba(0, 0, 0, 0.2);
+  border-left: 1px solid rgba(255,255,255,0.2);
+  border-right: 1px solid rgba(255,255,255,0.2);
   padding-left: 25px;
   padding-right: 25px;
 }
 
 
 
-
+body {
+  background-image: url("/Assets/potencialFondo.png");
+  background-color: #cccccc;
+ }
